force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Area configuration</fullName>
                <label>Area Configuration</label>
            </value>
            <value>
                <fullName>Auto Lost</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Expecting market correction</fullName>
                <label>Expecting Market Correction</label>
            </value>
            <value>
                <fullName>Finds price too high</fullName>
                <label>Finds Price Too High</label>
            </value>
            <value>
                <fullName>Invested Elsewhere</fullName>
            </value>
            <value>
                <fullName>Job enquiry</fullName>
                <label>Job Enquiry</label>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Market Research</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not Contactable</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment schedule</fullName>
                <label>Payment Schedule</label>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Possession</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>REC</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Wrong No</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Budget Insufficient</fullName>
            </value>
            <value>
                <fullName>Location Not Preferred</fullName>
            </value>
            <value>
                <fullName>Postponed Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>