force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Masked_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Masked_Alternate_Email__c</fullName>
    <formula>IF(
    ISBLANK(EYI_Alternate_Email__c),
    &quot; &quot;,
    SUBSTITUTE(EYI_Alternate_Email__c, LEFT(EYI_Alternate_Email__c, FIND(&quot;@&quot;, EYI_Alternate_Email__c) - 1), &quot;*******&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Email</label>
    <type>Text</type>
</CustomField>