force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Masked_Alternate_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Masked_Alternate_Mobile_No__c</fullName>
    <formula>IF(
ISBLANK(  EYI_Alternate_Mobile_No__c  ),
&quot; &quot;,
&quot;****&quot; &amp; RIGHT(EYI_Alternate_Mobile_No__c, LEN(EYI_Alternate_Mobile_No__c) - 4)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Mobile No</label>
    <type>Text</type>
</CustomField>