force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Masked_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Masked_Mobile__c</fullName>
    <formula>IF(
ISBLANK( EYI_Mobile__c ),
&quot; &quot;,
&quot;******&quot; &amp; RIGHT(EYI_Mobile__c, LEN(EYI_Mobile__c) - 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Mobile</label>
    <type>Text</type>
</CustomField>