force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mobile__c</fullName>
    <label>Secondary Mobile</label>
    <type>Phone</type>
</CustomField>