force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_No_of_Follow_Ups__c.field-meta.xml
<CustomField>
    <fullName>EYI_No_of_Follow_Ups__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to store the no. of follow ups done to mark the lead as lost.</description>
    <label>No. of Follow Ups</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>