force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_No_of_Not_Connected_Follow_Ups__c.field-meta.xml
<CustomField>
    <fullName>EYI_No_of_Not_Connected_Follow_Ups__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Not Connected Follow Ups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>