force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Non_Contactable_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Non_Contactable_Date__c</fullName>
    <label>Non Contactable Date</label>
    <type>DateTime</type>
</CustomField>