force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Number_of_Incoming_calls__c.field-meta.xml
<CustomField>
    <fullName>EYI_Number_of_Incoming_calls__c</fullName>
    <label>Number of Incoming calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>