force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Occupation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Homemaker</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>