force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Lead Enquiries</relationshipLabel>
    <relationshipName>Lead_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>