force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Outbound_L1_Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_Outbound_L1_Escalation_Time__c</fullName>
    <description>This field is used to store the L1 escalation time for outbound call.</description>
    <label>Outbound L1 Escalation Time</label>
    <type>DateTime</type>
</CustomField>