force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Outbound_L2_Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_Outbound_L2_Escalation_Time__c</fullName>
    <label>Outbound L2 Escalation Time</label>
    <type>DateTime</type>
</CustomField>