force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Lead_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>