force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Phone__c.field-meta.xml
<CustomField>
    <fullName>EYI_Phone__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>