force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_PREC_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_PREC_Code__c</fullName>
    <label>PREC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>