force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Profile_Negative_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Profile_Negative_Reason__c</fullName>
    <inlineHelpText>Update Profile Negative Reason here.</inlineHelpText>
    <label>Profile Negative Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>