force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Profile_Verified__c.field-meta.xml
<CustomField>
    <fullName>EYI_Profile_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Verified</label>
    <type>Checkbox</type>
</CustomField>