force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Project_Enquired__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Enquired__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Enquired</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EYI_Project__c.EYI_Project_Property_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.EYI_Segment__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Lead Enquiries</relationshipLabel>
    <relationshipName>Lead_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>