force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Project_URLs__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_URLs__c</fullName>
    <label>Project URLs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>