force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Property__c.field-meta.xml
<CustomField>
    <fullName>EYI_Property__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>46 Banyan Tree</fullName>
                <isActive>false</isActive>
                <label>46 Banyan Tree</label>
            </value>
            <value>
                <fullName>57 Avenue</fullName>
                <isActive>false</isActive>
                <label>57 Avenue</label>
            </value>
            <value>
                <fullName>86 Banyan Tree</fullName>
                <isActive>false</isActive>
                <label>86 Banyan Tree</label>
            </value>
            <value>
                <fullName>Avant Garde</fullName>
            </value>
            <value>
                <fullName>Balewadi</fullName>
            </value>
            <value>
                <fullName>Bougain Villa</fullName>
            </value>
            <value>
                <fullName>Casa 9</fullName>
            </value>
            <value>
                <fullName>Central Park</fullName>
                <isActive>false</isActive>
                <label>Central Park</label>
            </value>
            <value>
                <fullName>ELEVEN WEST</fullName>
            </value>
            <value>
                <fullName>EON Waterfront II</fullName>
            </value>
            <value>
                <fullName>Eon Waterfront PH I</fullName>
            </value>
            <value>
                <fullName>Forest Castle</fullName>
            </value>
            <value>
                <fullName>Futura</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
                <isActive>false</isActive>
                <label>Generic</label>
            </value>
            <value>
                <fullName>Gold Craft</fullName>
                <isActive>false</isActive>
                <label>Gold Craft</label>
            </value>
            <value>
                <fullName>Golden Bell</fullName>
            </value>
            <value>
                <fullName>New Commercial</fullName>
                <isActive>false</isActive>
                <label>New Commercial</label>
            </value>
            <value>
                <fullName>New Residential</fullName>
                <isActive>false</isActive>
                <label>New Residential</label>
            </value>
            <value>
                <fullName>Ocean Tower</fullName>
                <isActive>false</isActive>
                <label>Ocean Tower</label>
            </value>
            <value>
                <fullName>One North</fullName>
            </value>
            <value>
                <fullName>Panchshil Avenue</fullName>
                <isActive>false</isActive>
                <label>Panchshil Avenue</label>
            </value>
            <value>
                <fullName>Panchshil Towers</fullName>
            </value>
            <value>
                <fullName>Queens Court</fullName>
            </value>
            <value>
                <fullName>Satellite Towers</fullName>
            </value>
            <value>
                <fullName>SoHo</fullName>
            </value>
            <value>
                <fullName>Ssilverwoods</fullName>
            </value>
            <value>
                <fullName>The Address</fullName>
            </value>
            <value>
                <fullName>The Chambers</fullName>
            </value>
            <value>
                <fullName>The Golden Bell II</fullName>
            </value>
            <value>
                <fullName>Trump Towers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>