force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Purpose_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>EYI_Purpose_of_Purchase__c</fullName>
    <label>Purpose of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Nature_of_Lead__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End Use</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Second Home</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
                <isActive>false</isActive>
                <label>End User</label>
            </value>
            <value>
                <fullName>Gift</fullName>
                <isActive>false</isActive>
                <label>Gift</label>
            </value>
            <value>
                <fullName>Investor</fullName>
                <isActive>false</isActive>
                <label>Investor</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>