force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Qualification_Status__c</fullName>
    <label>Qualification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not qualified</fullName>
                <default>true</default>
                <label>Not qualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>