force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Rating__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
                <default>true</default>
                <label>Cold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>