force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_REC_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REC Account</label>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>Lead Enquiries</relationshipLabel>
    <relationshipName>Lead_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>