force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>EYI_Referred_By__c</fullName>
    <label>Referred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>