force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Salutation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Mr. and Mrs.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>Adv.</fullName>
            </value>
            <value>
                <fullName>Brig.</fullName>
            </value>
            <value>
                <fullName>Capt.</fullName>
            </value>
            <value>
                <fullName>Col.</fullName>
            </value>
            <value>
                <fullName>Lt. Col.</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>