force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>EYI_Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>