force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Segment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>