force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Site_Visit_and_Project_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_Site_Visit_and_Project_Address__c</fullName>
    <description>Use in SMS Template as concatenated field</description>
    <formula>TEXT(DATEVALUE(EYI_Site_Visit_Date__c)) &amp;
IF(NOT(ISBLANK(EYI_Address__Street__s)), &quot;, &quot; &amp; EYI_Address__Street__s, &quot;&quot;) &amp;
IF(NOT(ISBLANK( EYI_Address__City__s )), &quot;, &quot; &amp; EYI_Address__City__s, &quot;&quot;) &amp;
IF(NOT(ISBLANK( EYI_Address__PostalCode__s )), &quot;, &quot; &amp; EYI_Address__PostalCode__s, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit and Project Address</label>
    <type>Text</type>
</CustomField>