force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Site_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Site_Visit_Date__c</fullName>
    <label>Proposed Date of Visit</label>
    <type>DateTime</type>
</CustomField>