force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Site_Visit_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>EYI_Site_Visit_Date_Text__c</fullName>
    <formula>TEXT(DATEVALUE(EYI_Site_Visit_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Visit Date Text</label>
    <type>Text</type>
</CustomField>