force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_SM_Lead_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>EYI_SM_Lead_Enquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SM Lead Enquiry</label>
    <type>Checkbox</type>
</CustomField>