force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Sourcing_S_M__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sourcing_S_M__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing S M</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Enquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>