force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Sub_Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sub_Asset_Class__c</fullName>
    <formula>TEXT(EYI_Project_Enquired__r.EYI_Sub_Asset_Class__c)</formula>
    <label>Sub Asset Class</label>
    <type>Text</type>
</CustomField>