force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Total_Active_CIF__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Active_CIF__c</fullName>
    <label>Total Active CIF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>