force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Unit_Configuration__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Configuration__c</fullName>
    <label>Unit Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Property__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2BHK</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
            <value>
                <fullName>4BHK</fullName>
            </value>
            <value>
                <fullName>3.5BHK</fullName>
            </value>
            <value>
                <fullName>4.5BHK</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Office Spaces</fullName>
            </value>
            <value>
                <fullName>Retail Store</fullName>
            </value>
            <value>
                <fullName>Retail Unit</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Simplex</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>1.5BHK</fullName>
                <isActive>false</isActive>
                <label>1.5BHK</label>
            </value>
            <value>
                <fullName>1000 -2000 Sqft</fullName>
                <isActive>false</isActive>
                <label>1000 -2000 Sqft</label>
            </value>
            <value>
                <fullName>2.5BHK</fullName>
                <isActive>false</isActive>
                <label>2.5BHK</label>
            </value>
            <value>
                <fullName>2000-3000 Sqft</fullName>
                <isActive>false</isActive>
                <label>2000-3000 Sqft</label>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
                <isActive>false</isActive>
                <label>3.5 BHK</label>
            </value>
            <value>
                <fullName>3000-4000 Sqft</fullName>
                <isActive>false</isActive>
                <label>3000-4000 Sqft</label>
            </value>
            <value>
                <fullName>4000-5000 Sqft</fullName>
                <isActive>false</isActive>
                <label>4000-5000 Sqft</label>
            </value>
            <value>
                <fullName>5 BHK</fullName>
                <isActive>false</isActive>
                <label>5 BHK</label>
            </value>
            <value>
                <fullName>5000-6000 Sqft</fullName>
                <isActive>false</isActive>
                <label>5000-6000 Sqft</label>
            </value>
            <value>
                <fullName>&lt; 1000 Sqft</fullName>
                <isActive>false</isActive>
                <label>&lt; 1000 Sqft</label>
            </value>
            <value>
                <fullName>&gt;6000 Sqft</fullName>
                <isActive>false</isActive>
                <label>&gt;6000 Sqft</label>
            </value>
            <value>
                <fullName>FUTURE</fullName>
                <isActive>false</isActive>
                <label>FUTURE</label>
            </value>
            <value>
                <fullName>Floor Plate</fullName>
                <isActive>false</isActive>
                <label>Floor Plate</label>
            </value>
            <value>
                <fullName>Joshi Villa</fullName>
                <isActive>false</isActive>
                <label>Joshi Villa</label>
            </value>
            <value>
                <fullName>Office Space</fullName>
                <isActive>false</isActive>
                <label>Office Space</label>
            </value>
            <value>
                <fullName>Podium Villas</fullName>
                <isActive>false</isActive>
                <label>Podium Villas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>