force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>EYI_UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>