force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>EYI_UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <length>15</length>
    <type>Text</type>
</CustomField>