force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_UTM_Parameter__c.field-meta.xml
<CustomField>
    <fullName>EYI_UTM_Parameter__c</fullName>
    <formula>EYI_UTM_Source__c &amp; &quot;_&quot; &amp; EYI_UTM_Medium__c &amp; &quot;_&quot; &amp; EYI_UTM_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Parameter</label>
    <type>Text</type>
</CustomField>