force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>EYI_UTM_Source__c</fullName>
    <label>UTM Source</label>
    <length>15</length>
    <type>Text</type>
</CustomField>