force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Mask_Data_test__c.field-meta.xml
<CustomField>
    <fullName>Mask_Data_test__c</fullName>
    <label>Mask Data test</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>