force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Missed__c.field-meta.xml
<CustomField>
    <fullName>Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missed</label>
    <type>Checkbox</type>
</CustomField>