force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Missed_Call__c.field-meta.xml
<CustomField>
    <fullName>Missed_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missed Call</label>
    <type>Checkbox</type>
</CustomField>