force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Number_of_Retries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Retries__c</fullName>
    <label>Number of Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>