force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF(
ISBLANK(  EYI_Phone__c  ),
&quot; &quot;,
&quot;******&quot; &amp; RIGHT(EYI_Phone__c, LEN(EYI_Phone__c) - 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>