force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Status__c</fullName>
    <label>Profile Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>