force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Sticky_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sticky_Agent__c</fullName>
    <formula>CASESAFEID( OwnerId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sticky Agent</label>
    <type>Text</type>
</CustomField>