force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Working Hours</label>
    <type>Checkbox</type>
</CustomField>