force-app/main/default/objects/EYI_Lead_Enquiry__c/validationRules/A_minimum_of_10_follow_ups_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>A_minimum_of_10_follow_ups_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( EYI_IsAutomationBypassed__c == false 
,  EYI_No_of_Not_Connected_Follow_Ups__c &lt; 5
,  EYI_No_of_Follow_Ups__c &lt; 1
, ISPICKVAL(EYI_Lead_Status__c , &quot;Lost&quot;)
)</errorConditionFormula>
    <errorMessage>At least 10 follow-ups must be completed.</errorMessage>
</ValidationRule>